# 43-da-nang-chua-cau-hoi-an-glb

./: .gitignore  README.md  main.py  pyproject.toml
docs/: implementation_notes.md  prompt10_restore_center_bay_note.md  prompt11_remove_inner_fence_roof_bar_note.md  prompt5_material_roof_rail_slope_fix_note.md  prompt6_side_red_walls_flat_land_fix_note.md  prompt7_shorter_bridge_extended_sides_fix_note.md  prompt8_three_segment_bridge_profile_fix_note.md  prompt9_clean_center_bay_fix_note.md  texture_upgrade_notes_prompt4.md  v10_higher_frame_flat_banks_note.md  v15_validation_report.md  v15_variable_arches_reconstructed_source_note.md  v28_entry_cleanup_wood_landing_fix_source_note.md  v29_build_log.txt  v29_side_door_bar_cleanup_inner_wood_profile_fix_note.md  v30_inner_brown_deck_up_flat_down_fix_note.md  v31_build_log.txt  v31_inner_brown_floor_profile_final_fix_note.md  v32_inner_tan_horizontal_plank_fix_note.md  v33_side_door_wood_slab_stone_cleanup_note.md  v34_side_door_floor_wood_bar_cleanup_note.md  v35_side_door_column_slab_pedestal_cleanup_note.md  v36_reference_roof_tile_ceramic_fix_note.md  v37_roof_material_image2_fix_note.md  v38_roof_architecture_image2_layout_fix_note.md  v39_roof_square_fill_fix_note.md  v40_roof_drop_to_red_gable_fix_note.md  v41_remove_front_small_roof_note.md  v42_back_small_roof_on_red_note.md  v43_front_small_roof_added_note.md  v44_remove_front_small_roof_note.md  v45_remove_vien_nau_note.md  v46_remove_back_vien_nau_note.md  v47_roof_curve_note.md  v48_remove_front_mat13_note.md  v5_land_edges_fix_note.md  v8_no_flicker_note.md  (+5 more)
(+72 files in other folders)
